--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "main": "index.js",
   "scripts": {
     "tsc": "pnpm --filter @demo-ts/include start",
+    "prepare": "husky install",
     "preinstall": "node preinstall.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "2.25.2",
+    "husky": "^8.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
